v0.10.1/_sources/generated/statsmodels.regression.linear_model.OLSResults.rst.txt
statsmodels.regression.linear\_model.OLSResults
===============================================

.. currentmodule:: statsmodels.regression.linear_model

.. autoclass:: OLSResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         OLSResults.HC0_se
         OLSResults.HC1_se
         OLSResults.HC2_se
         OLSResults.HC3_se
         OLSResults.aic
         OLSResults.bic
         OLSResults.bse
         OLSResults.centered_tss
         OLSResults.compare_f_test
         OLSResults.compare_lm_test
         OLSResults.compare_lr_test
         OLSResults.condition_number
         OLSResults.conf_int
         OLSResults.conf_int_el
         OLSResults.cov_HC0
         OLSResults.cov_HC1
         OLSResults.cov_HC2
         OLSResults.cov_HC3
         OLSResults.cov_params
         OLSResults.eigenvals
         OLSResults.el_test
         OLSResults.ess
         OLSResults.f_pvalue
         OLSResults.f_test
         OLSResults.fittedvalues
         OLSResults.fvalue
         OLSResults.get_influence
         OLSResults.get_prediction
         OLSResults.get_robustcov_results
         OLSResults.initialize
         OLSResults.llf
         OLSResults.load
         OLSResults.mse_model
         OLSResults.mse_resid
         OLSResults.mse_total
         OLSResults.nobs
         OLSResults.normalized_cov_params
         OLSResults.outlier_test
         OLSResults.predict
         OLSResults.pvalues
         OLSResults.remove_data
         OLSResults.resid
         OLSResults.resid_pearson
         OLSResults.rsquared
         OLSResults.rsquared_adj
         OLSResults.save
         OLSResults.scale
         OLSResults.ssr
         OLSResults.summary
         OLSResults.summary2
         OLSResults.t_test
         OLSResults.t_test_pairwise
         OLSResults.tvalues
         OLSResults.uncentered_tss
         OLSResults.wald_test
         OLSResults.wald_test_terms
         OLSResults.wresid



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         OLSResults.use_t

