v0.15.0/_sources/generated/statsmodels.regression.linear_model.OLSResults.rst.txt
statsmodels.regression.linear\_model.OLSResults
===============================================

.. currentmodule:: statsmodels.regression.linear_model

.. autoclass:: OLSResults
   :exclude-members: compare_f_test,compare_lm_test,compare_lr_test,conf_int,conf_int_el,cov_params,el_test,f_test,get_influence,get_prediction,get_robustcov_results,info_criteria,initialize,load,normalized_cov_params,outlier_test,predict,remove_data,save,scale,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~OLSResults.compare_f_test
      ~OLSResults.compare_lm_test
      ~OLSResults.compare_lr_test
      ~OLSResults.conf_int
      ~OLSResults.conf_int_el
      ~OLSResults.cov_params
      ~OLSResults.el_test
      ~OLSResults.f_test
      ~OLSResults.get_influence
      ~OLSResults.get_prediction
      ~OLSResults.get_robustcov_results
      ~OLSResults.info_criteria
      ~OLSResults.initialize
      ~OLSResults.load
      ~OLSResults.normalized_cov_params
      ~OLSResults.outlier_test
      ~OLSResults.predict
      ~OLSResults.remove_data
      ~OLSResults.save
      ~OLSResults.scale
      ~OLSResults.summary
      ~OLSResults.summary2
      ~OLSResults.t_test
      ~OLSResults.t_test_pairwise
      ~OLSResults.wald_test
      ~OLSResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~OLSResults.HC0_se
      ~OLSResults.HC1_se
      ~OLSResults.HC2_se
      ~OLSResults.HC3_se
      ~OLSResults.aic
      ~OLSResults.bic
      ~OLSResults.bse
      ~OLSResults.centered_tss
      ~OLSResults.condition_number
      ~OLSResults.cov_HC0
      ~OLSResults.cov_HC1
      ~OLSResults.cov_HC2
      ~OLSResults.cov_HC3
      ~OLSResults.eigenvals
      ~OLSResults.ess
      ~OLSResults.f_pvalue
      ~OLSResults.fittedvalues
      ~OLSResults.fvalue
      ~OLSResults.llf
      ~OLSResults.mse_model
      ~OLSResults.mse_resid
      ~OLSResults.mse_total
      ~OLSResults.nobs
      ~OLSResults.pvalues
      ~OLSResults.resid
      ~OLSResults.resid_pearson
      ~OLSResults.rsquared
      ~OLSResults.rsquared_adj
      ~OLSResults.ssr
      ~OLSResults.tvalues
      ~OLSResults.uncentered_tss
      ~OLSResults.use_t
      ~OLSResults.wresid
   
   
   